--- a/styles/popup.css
+++ b/styles/popup.css
@@ -51,6 +51,10 @@
   background-color: rgb(218, 88, 88);
 }
 
+.btn-submit-close:hover{
+  background-color: rgb(228, 88, 88);
+}
+
 .popup-close {
   position: absolute;
   top: 5px;
