--- a/styles/tarefas.css
+++ b/styles/tarefas.css
@@ -46,6 +46,10 @@ a {
   cursor: pointer;
 }
 
+#closeApp:hover{
+  background-color: rgb(228, 88, 88);
+}
+
 /* Nova tarefa ----------------------------------------------------------- */
 
 .nova-tarefa {
@@ -185,15 +189,30 @@ a {
   background: none;
 }
 
-.fa-trash-o{
-  background-color: aqua;
-  color: crimson;
-}
-
 .tarefa .timestamp {
   font-size: .9em;
   color: rgb(134, 134, 134);
 }
+
+.tarefa button{
+  background: none;
+}
+
+.tarefa button svg{
+  fill: rgb(95, 95, 95);
+  width: 16px;
+  height: 16px;
+}
+
+.tarefa button svg:hover{
+  fill: crimson;
+}
+
+.tarefa .descricao div{
+  display: flex;
+  gap: 10px;
+}
+
 
 /* Tarefas terminadas ----------------------------------------------------------- */
 
